// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Btn /> "form" Btn renders properly 1`] = `
<Btn
  form="test form"
  text="form button text"
  title="form button"
  type="submit"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title="form button"
  >
    <Tooltip
      classes={
        Object {
          "open": "MuiTooltip-open-2",
          "popper": "MuiTooltip-popper-1",
          "tooltip": "MuiTooltip-tooltip-3",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-8",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-5",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-6",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-7",
          "touch": "MuiTooltip-touch-4",
        }
      }
      disableFocusListener={false}
      disableHoverListener={false}
      disableTouchListener={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "hoverOpacity": 0.08,
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "augmentColor": [Function],
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title="form button"
    >
      <Manager
        tag={false}
      >
        <EventListener
          onResize={[Function]}
          target="window"
        />
        <Target>
          <RootRef
            rootRef={[Function]}
          >
            <WithStyles(Typography)
              aria-describedby="tooltip-icon"
              component="div"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={Object {}}
            >
              <Typography
                align="inherit"
                aria-describedby="tooltip-icon"
                classes={
                  Object {
                    "alignCenter": "MuiTypography-alignCenter-22",
                    "alignJustify": "MuiTypography-alignJustify-24",
                    "alignLeft": "MuiTypography-alignLeft-21",
                    "alignRight": "MuiTypography-alignRight-23",
                    "body1": "MuiTypography-body1-18",
                    "body2": "MuiTypography-body2-17",
                    "button": "MuiTypography-button-20",
                    "caption": "MuiTypography-caption-19",
                    "colorError": "MuiTypography-colorError-32",
                    "colorInherit": "MuiTypography-colorInherit-28",
                    "colorPrimary": "MuiTypography-colorPrimary-29",
                    "colorSecondary": "MuiTypography-colorSecondary-30",
                    "colorTextSecondary": "MuiTypography-colorTextSecondary-31",
                    "display1": "MuiTypography-display1-13",
                    "display2": "MuiTypography-display2-12",
                    "display3": "MuiTypography-display3-11",
                    "display4": "MuiTypography-display4-10",
                    "gutterBottom": "MuiTypography-gutterBottom-26",
                    "headline": "MuiTypography-headline-14",
                    "noWrap": "MuiTypography-noWrap-25",
                    "paragraph": "MuiTypography-paragraph-27",
                    "root": "MuiTypography-root-9",
                    "subheading": "MuiTypography-subheading-16",
                    "title": "MuiTypography-title-15",
                  }
                }
                color="default"
                component="div"
                gutterBottom={false}
                headlineMapping={
                  Object {
                    "body1": "p",
                    "body2": "aside",
                    "display1": "h1",
                    "display2": "h1",
                    "display3": "h1",
                    "display4": "h1",
                    "headline": "h1",
                    "subheading": "h3",
                    "title": "h2",
                  }
                }
                noWrap={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                paragraph={false}
                style={Object {}}
                variant="body1"
              >
                <div
                  aria-describedby="tooltip-icon"
                  className="MuiTypography-root-9 MuiTypography-body1-18"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={Object {}}
                >
                  <WithStyles(Button)
                    className=""
                    color="primary"
                    disabled={false}
                    form="test form"
                    size="medium"
                    style={Object {}}
                    type="submit"
                    variant="raised"
                  >
                    <Button
                      className=""
                      classes={
                        Object {
                          "colorInherit": "MuiButton-colorInherit-38",
                          "disabled": "MuiButton-disabled-43",
                          "fab": "MuiButton-fab-44",
                          "flatPrimary": "MuiButton-flatPrimary-35",
                          "flatSecondary": "MuiButton-flatSecondary-36",
                          "focusVisible": "MuiButton-focusVisible-42",
                          "fullWidth": "MuiButton-fullWidth-48",
                          "label": "MuiButton-label-34",
                          "mini": "MuiButton-mini-45",
                          "outlined": "MuiButton-outlined-37",
                          "raised": "MuiButton-raised-39",
                          "raisedPrimary": "MuiButton-raisedPrimary-40",
                          "raisedSecondary": "MuiButton-raisedSecondary-41",
                          "root": "MuiButton-root-33",
                          "sizeLarge": "MuiButton-sizeLarge-47",
                          "sizeSmall": "MuiButton-sizeSmall-46",
                        }
                      }
                      color="primary"
                      component="button"
                      disableFocusRipple={false}
                      disabled={false}
                      form="test form"
                      fullWidth={false}
                      mini={false}
                      size="medium"
                      style={Object {}}
                      type="submit"
                      variant="raised"
                    >
                      <WithStyles(ButtonBase)
                        className="MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                        component="button"
                        disabled={false}
                        focusRipple={true}
                        focusVisibleClassName="MuiButton-focusVisible-42"
                        form="test form"
                        style={Object {}}
                        type="submit"
                      >
                        <ButtonBase
                          centerRipple={false}
                          className="MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-50",
                              "focusVisible": "MuiButtonBase-focusVisible-51",
                              "root": "MuiButtonBase-root-49",
                            }
                          }
                          component="button"
                          disableRipple={false}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="MuiButton-focusVisible-42"
                          form="test form"
                          style={Object {}}
                          tabIndex="0"
                          type="submit"
                        >
                          <button
                            className="MuiButtonBase-root-49 MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                            disabled={false}
                            form="test form"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            style={Object {}}
                            tabIndex="0"
                            type="submit"
                          >
                            <span
                              className="MuiButton-label-34"
                            >
                              form button text
                            </span>
                            <WithStyles(TouchRipple)
                              center={false}
                              innerRef={[Function]}
                            >
                              <TouchRipple
                                center={false}
                                classes={
                                  Object {
                                    "child": "MuiTouchRipple-child-56",
                                    "childLeaving": "MuiTouchRipple-childLeaving-57",
                                    "childPulsate": "MuiTouchRipple-childPulsate-58",
                                    "ripple": "MuiTouchRipple-ripple-53",
                                    "ripplePulsate": "MuiTouchRipple-ripplePulsate-55",
                                    "rippleVisible": "MuiTouchRipple-rippleVisible-54",
                                    "root": "MuiTouchRipple-root-52",
                                  }
                                }
                              >
                                <TransitionGroup
                                  childFactory={[Function]}
                                  className="MuiTouchRipple-root-52"
                                  component="span"
                                  enter={true}
                                  exit={true}
                                >
                                  <span
                                    className="MuiTouchRipple-root-52"
                                  />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </button>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </Button>
                  </WithStyles(Button)>
                </div>
              </Typography>
            </WithStyles(Typography)>
          </RootRef>
        </Target>
        <Portal>
          <Portal
            containerInfo={
              <body>
                <div
                  class="app"
                  id="app"
                >
                  <form
                    action="/"
                    id="test form"
                  >
                    <div
                      aria-describedby="tooltip-icon"
                      class="MuiTypography-root-9 MuiTypography-body1-18"
                    >
                      <button
                        class="MuiButtonBase-root-49 MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                        form="test form"
                        tabindex="0"
                        type="submit"
                      >
                        <span
                          class="MuiButton-label-34"
                        >
                          form button text
                        </span>
                        <span
                          class="MuiTouchRipple-root-52"
                        />
                      </button>
                    </div>
                  </form>
                </div>
                <div
                  class="MuiTooltip-popper-1"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-3 MuiTooltip-tooltipPlacementBottom-8"
                    id="tooltip-icon"
                    role="tooltip"
                  >
                    form button
                  </div>
                </div>
              </body>
            }
          >
            <Popper
              className="MuiTooltip-popper-1"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
              positionFixed={false}
            >
              <div
                className="MuiTooltip-popper-1"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-3 MuiTooltip-tooltipPlacementBottom-8"
                  id="tooltip-icon"
                  role="tooltip"
                >
                  form button
                </div>
              </div>
            </Popper>
          </Portal>
        </Portal>
      </Manager>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;

exports[`<Btn /> "onClick" Btn renders properly 1`] = `
<Btn
  onClick={[MockFunction]}
  text="onClick button text"
  title="onClick button"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title="onClick button"
  >
    <Tooltip
      classes={
        Object {
          "open": "MuiTooltip-open-2",
          "popper": "MuiTooltip-popper-1",
          "tooltip": "MuiTooltip-tooltip-3",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-8",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-5",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-6",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-7",
          "touch": "MuiTooltip-touch-4",
        }
      }
      disableFocusListener={false}
      disableHoverListener={false}
      disableTouchListener={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "hoverOpacity": 0.08,
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "augmentColor": [Function],
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title="onClick button"
    >
      <Manager
        tag={false}
      >
        <EventListener
          onResize={[Function]}
          target="window"
        />
        <Target>
          <RootRef
            rootRef={[Function]}
          >
            <WithStyles(Typography)
              aria-describedby="tooltip-icon"
              component="div"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={Object {}}
            >
              <Typography
                align="inherit"
                aria-describedby="tooltip-icon"
                classes={
                  Object {
                    "alignCenter": "MuiTypography-alignCenter-22",
                    "alignJustify": "MuiTypography-alignJustify-24",
                    "alignLeft": "MuiTypography-alignLeft-21",
                    "alignRight": "MuiTypography-alignRight-23",
                    "body1": "MuiTypography-body1-18",
                    "body2": "MuiTypography-body2-17",
                    "button": "MuiTypography-button-20",
                    "caption": "MuiTypography-caption-19",
                    "colorError": "MuiTypography-colorError-32",
                    "colorInherit": "MuiTypography-colorInherit-28",
                    "colorPrimary": "MuiTypography-colorPrimary-29",
                    "colorSecondary": "MuiTypography-colorSecondary-30",
                    "colorTextSecondary": "MuiTypography-colorTextSecondary-31",
                    "display1": "MuiTypography-display1-13",
                    "display2": "MuiTypography-display2-12",
                    "display3": "MuiTypography-display3-11",
                    "display4": "MuiTypography-display4-10",
                    "gutterBottom": "MuiTypography-gutterBottom-26",
                    "headline": "MuiTypography-headline-14",
                    "noWrap": "MuiTypography-noWrap-25",
                    "paragraph": "MuiTypography-paragraph-27",
                    "root": "MuiTypography-root-9",
                    "subheading": "MuiTypography-subheading-16",
                    "title": "MuiTypography-title-15",
                  }
                }
                color="default"
                component="div"
                gutterBottom={false}
                headlineMapping={
                  Object {
                    "body1": "p",
                    "body2": "aside",
                    "display1": "h1",
                    "display2": "h1",
                    "display3": "h1",
                    "display4": "h1",
                    "headline": "h1",
                    "subheading": "h3",
                    "title": "h2",
                  }
                }
                noWrap={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                paragraph={false}
                style={Object {}}
                variant="body1"
              >
                <div
                  aria-describedby="tooltip-icon"
                  className="MuiTypography-root-9 MuiTypography-body1-18"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={Object {}}
                >
                  <WithStyles(Button)
                    className=""
                    color="primary"
                    disabled={false}
                    onClick={[MockFunction]}
                    size="medium"
                    style={Object {}}
                    variant="raised"
                  >
                    <Button
                      className=""
                      classes={
                        Object {
                          "colorInherit": "MuiButton-colorInherit-38",
                          "disabled": "MuiButton-disabled-43",
                          "fab": "MuiButton-fab-44",
                          "flatPrimary": "MuiButton-flatPrimary-35",
                          "flatSecondary": "MuiButton-flatSecondary-36",
                          "focusVisible": "MuiButton-focusVisible-42",
                          "fullWidth": "MuiButton-fullWidth-48",
                          "label": "MuiButton-label-34",
                          "mini": "MuiButton-mini-45",
                          "outlined": "MuiButton-outlined-37",
                          "raised": "MuiButton-raised-39",
                          "raisedPrimary": "MuiButton-raisedPrimary-40",
                          "raisedSecondary": "MuiButton-raisedSecondary-41",
                          "root": "MuiButton-root-33",
                          "sizeLarge": "MuiButton-sizeLarge-47",
                          "sizeSmall": "MuiButton-sizeSmall-46",
                        }
                      }
                      color="primary"
                      component="button"
                      disableFocusRipple={false}
                      disabled={false}
                      fullWidth={false}
                      mini={false}
                      onClick={[MockFunction]}
                      size="medium"
                      style={Object {}}
                      type="button"
                      variant="raised"
                    >
                      <WithStyles(ButtonBase)
                        className="MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                        component="button"
                        disabled={false}
                        focusRipple={true}
                        focusVisibleClassName="MuiButton-focusVisible-42"
                        onClick={[MockFunction]}
                        style={Object {}}
                        type="button"
                      >
                        <ButtonBase
                          centerRipple={false}
                          className="MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-50",
                              "focusVisible": "MuiButtonBase-focusVisible-51",
                              "root": "MuiButtonBase-root-49",
                            }
                          }
                          component="button"
                          disableRipple={false}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="MuiButton-focusVisible-42"
                          onClick={[MockFunction]}
                          style={Object {}}
                          tabIndex="0"
                          type="button"
                        >
                          <button
                            className="MuiButtonBase-root-49 MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[MockFunction]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            style={Object {}}
                            tabIndex="0"
                            type="button"
                          >
                            <span
                              className="MuiButton-label-34"
                            >
                              onClick button text
                            </span>
                            <WithStyles(TouchRipple)
                              center={false}
                              innerRef={[Function]}
                            >
                              <TouchRipple
                                center={false}
                                classes={
                                  Object {
                                    "child": "MuiTouchRipple-child-56",
                                    "childLeaving": "MuiTouchRipple-childLeaving-57",
                                    "childPulsate": "MuiTouchRipple-childPulsate-58",
                                    "ripple": "MuiTouchRipple-ripple-53",
                                    "ripplePulsate": "MuiTouchRipple-ripplePulsate-55",
                                    "rippleVisible": "MuiTouchRipple-rippleVisible-54",
                                    "root": "MuiTouchRipple-root-52",
                                  }
                                }
                              >
                                <TransitionGroup
                                  childFactory={[Function]}
                                  className="MuiTouchRipple-root-52"
                                  component="span"
                                  enter={true}
                                  exit={true}
                                >
                                  <span
                                    className="MuiTouchRipple-root-52"
                                  />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </button>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </Button>
                  </WithStyles(Button)>
                </div>
              </Typography>
            </WithStyles(Typography)>
          </RootRef>
        </Target>
        <Portal>
          <Portal
            containerInfo={
              <body>
                <div
                  class="app"
                  id="app"
                >
                  <div
                    aria-describedby="tooltip-icon"
                    class="MuiTypography-root-9 MuiTypography-body1-18"
                  >
                    <button
                      class="MuiButtonBase-root-49 MuiButton-root-33 MuiButton-raised-39 MuiButton-raisedPrimary-40"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-34"
                      >
                        onClick button text
                      </span>
                      <span
                        class="MuiTouchRipple-root-52"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="MuiTooltip-popper-1"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-3 MuiTooltip-tooltipPlacementBottom-8"
                    id="tooltip-icon"
                    role="tooltip"
                  >
                    onClick button
                  </div>
                </div>
              </body>
            }
          >
            <Popper
              className="MuiTooltip-popper-1"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
              positionFixed={false}
            >
              <div
                className="MuiTooltip-popper-1"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-3 MuiTooltip-tooltipPlacementBottom-8"
                  id="tooltip-icon"
                  role="tooltip"
                >
                  onClick button
                </div>
              </div>
            </Popper>
          </Portal>
        </Portal>
      </Manager>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;
